tp10 java finished?