@@ -6,38 +6,38 @@ import java.util.function.Function;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
-public class Seq<E> implements Iterable<E>{
+public class Seq2<E> implements Iterable<E>{
     private final List<?> lst;
     private final Function<Object, E> mapper;
 
     @SuppressWarnings("unchecked")
-    public Seq(List<? extends E> lst) {
+    public Seq2(List<? extends E> lst) {
         Objects.requireNonNull(lst);
         this.lst = List.copyOf(lst);
         mapper = e -> (E) e;
     }
 
-    public Seq(List<?> lst, Function<Object, E> mapper) {
+    public Seq2(List<?> lst, Function<Object, E> mapper) {
         Objects.requireNonNull(lst);
         Objects.requireNonNull(mapper);
         this.lst = List.copyOf(lst);
         this.mapper = mapper;
     }
 
-    public static <E> Seq<E> from(List<? extends E> lst) {
+    public static <E> Seq2<E> from(List<? extends E> lst) {
         Objects.requireNonNull(lst);
-        return new Seq<>(List.copyOf(lst));
+        return new Seq2<>(List.copyOf(lst));
     }
 
     @SafeVarargs
-    public static <E> Seq<E> of(E... value) {
+    public static <E> Seq2<E> of(E... value) {
         Objects.requireNonNull(value);
-        return new Seq<>(List.of(value));
+        return new Seq2<>(Arrays.asList(value));
     }
 
-    public <F> Seq<F> map(Function<? super E, ? extends F> func) {
+    public <F> Seq2<F> map(Function<? super E, ? extends F> func) {
         Objects.requireNonNull(func);
-        return new Seq<>(lst, this.mapper.andThen(func));
+        return new Seq2<>(lst, this.mapper.andThen(func));
     }
 
     public Object get(int index) {
